--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,11 @@ node_js:
   - "0.11"
   - "0.10"
 
-script:
+before_script:
   - npm install
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+script:
+  - npm test
+  - ./node_modules/karma/bin/karma start --browsers Firefox --single-run
