--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   "author": "Codio",
   "license": "MIT",
   "devDependencies": {
+    "brfs": "^1.2.0",
+    "browserify": "^3.46.1",
     "chai": "^1.9.1",
     "coffee-script": "^1.7.1",
+    "coffeeify": "^0.7.0",
+    "karma": "^0.12.21",
+    "karma-browserify": "^0.2.1",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-mocha": "^0.1.7",
     "mocha": "^1.21.3"
   },
   "dependencies": {
