--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 
 script:
+  - npm run hint
   - npm test
   - ./node_modules/karma/bin/karma start --browsers Firefox --single-run
