step settings for current working directory

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -5,6 +5,7 @@
         "title": { "$ref": "/title", "required": true },
         "files": { "$ref": "/files" },
         "editable": { "$ref": "/editable" },
-        "layout": { "$ref": "/layout" }
+        "layout": { "$ref": "/layout" },
+        "step": { "$ref": "/step" }
     }
 }
